RenderImage should not add itself as a RelevantRepaintedObject if its image frame is being decoded https://bugs.webkit.org/show_bug.cgi?id=174336

Patch by Said Abou-Hallawa <sabouhallawa@apple.com> on 2017-07-11
Reviewed by Simon Fraser.

Since nothing will be drawn till the image frame finishes decoding we should
treat returning ImageDrawResult::DidRequestDecoding from BitmapImage::draw
the same as we do when the image is still loading.

* rendering/RenderImage.cpp:
(WebCore::RenderImage::paintReplaced):
(WebCore::RenderImage::paintIntoRect):
* rendering/RenderImage.h:

Canonical link: https://commits.webkit.org/191201@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@219360 268f45cc-cd09-0410-ab3c-d52691b4dbfc